\name{NEWS}
\title{News for Package \pkg{scater}}

\section{Changes in version 1.20.0, Bioconductor 3.13 Release}{
\itemize{
    \item runMDS can use user-supplied function for calculating the distance matrix
    \item Made the handling of center, scale, color and limits similar in 
    plotDots, plotHeatmap, and plotGroupedHeatmap
    \item Add \code{use_fitsne} argument to runTSNE allowing the use of fast interpolated t-SNE in place of Barnes-Hut t-SNE.
}}

\section{Changes in version 1.18.0, Bioconductor 3.12 Release}{
\itemize{
    \item Migrated many utilities to the \pkg{scuttle} package.
    \item Deprecated \code{multiplot()} in favor of \code{gridExtras::grid.arrange()}.
    \item Added \code{swap_rownames} argument to plot functions, allowing selection of genes using a rowData column.
    \item Added \code{column_annotation_colors} argument to \code{plotHeatmap}
    \item Changed default point aesthetics for all plots.
    \item For \code{runColDataPCA}, reverted to documented behaviour of performing outlier detection on PCA coordinates rather than on non-transformed \code{colData}.
}}

\section{Changes in version 1.16.0, Bioconductor 3.11 Release (March 2020)}{
\itemize{
    \item Added coldata_merge= argument to aggregateAcrossCells() for custom column metadata aggregation.
    Also include averaged reduced dimension results for each group.
    \item Added label_format= argument to plotReducedDim() for greater control over the axis labels.
    \item Added geometric= argument to librarySizeFactors() to compute size factors with a geometric mean.
    \item Added the runMultiUMAP() function to perform a combined UMAP on multiple feature sets.
    \item Added the medianSizeFactors() function to perform a DESeq2-like size factor calculation.
    \item Modified isOutlier() so that min_diff= now acts on the log2 scale when log=TRUE.
    Added share_medians=, share_mads= and share_missing= options for sharing information across batches.